<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context="com.techvalley.android.project_rh_tv.controller.ConsultingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_cv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cv_status"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/tv_consultant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_qualif_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/qualif_state"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_attach_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/attachment_city"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_availability"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/availability"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_profil_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_daily_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/daily_rate"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action"
            android:layout_weight="0.5"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/colorPrimaryDark"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        tools:listitem="@layout/row_consulting">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
